tests/any_collapse_binary_operation/error.txt
Validation error: ./tests/any_collapse_binary_operation/any_collapse_binary_operation.fae:2
 No symbol `a` in the current scope
  2|     if a and false {}
            ^
